# sqlmodel-medallion-demo

./: .gitignore  .pre-commit-config.yaml  Claude.md  EVOLUTION.md  PERFORMANCE_GUIDE.md  QUICK_START.md  README.md  TEARDOWN_REBUILD_INSTRUCTIONS.md  check_bronze_status.sh  docker-compose.balanced.yml  docker-compose.lite.yml  docker-compose.performance.yml  docker-compose.yml  medallion_design.md  medallion_design_by_claude.md  medallion_design_by_claude__working_notes.md  medallion_design_by_claude_alt.md  medallion_design_by_claude_alt__working_notes.md  monitor_bronze_dag.sh  pyproject.toml  success_indicators.md  verify_bronze_data.sh
.claude/: settings.local.json  settings.local.json.orig
docker/airflow/: Dockerfile  requirements.txt
docs/: EVOLUTION_TRACKING_STANDARDS.md  FEATURES.md  VERSIONING.md
docs/adr/: ADR-001-spark-4-type-safety.md  ADR-002-individual-customer-metrics.md  ADR-003-strict-data-lineage.md  ADR-TEMPLATE.md  README.md
docs/migrations/: README.md  v0.2.0-to-v0.3.0.md
engines/: postgres_engine.py  sqlite_engine.py
examples/: README.md  performance-aware-dag.py
metrics/: platform_metrics.json
ref/pagila/: pagila.py
scripts/: build_databases.py  build_reference_data.py  build_reference_data_improved.py  build_relationships.py  build_schemas.py  build_tables.py  build_triggers.py  config.py  config.py.orig  migrate_reference_tables.py  orchestrate_build.py  performance-config.py  simple-performance-config.sh  spark-config-generator.py  test_temporal_discovery.py  validate_triggers.py
utils/: merge_helper.py  utils.py
(+110 files in other folders)
