[tool.poetry]
name = "sqlmodel-medallion-demo"
version = "0.1.0"
description = ""
authors = ["Eruditis Developer <developer@eruditis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
black = "24.1.0"
flake8 = "^6.1.0"
sqlmodel = "^0.0.18"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
pre-commit = "^3.7.1"
pytest = "^7.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
requests = "^2.32.3"
shed = "^2024.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
